# asyreader

./: README.md  pyproject.toml
.github/workflows/: pyright.yml  pytest.yml
src/asyreader/: __init__.py  reader.py
tests/: test_reader.py
